# vision_suturo_1718

./: .gitignore  README.md
02_code/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
02_code/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
02_code/catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
02_code/catkin_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
02_code/catkin_ws/devel/.private/chemistry_laboratory/: .catkin  .rosinstall  setup.sh
02_code/catkin_ws/devel/.private/chemistry_laboratory/lib/pkgconfig/: chemistry_laboratory.pc
02_code/catkin_ws/devel/.private/chemistry_laboratory/share/chemistry_laboratory/cmake/: chemistry_laboratoryConfig.cmake
02_code/catkin_ws/devel/.private/iai_kitchen/: .catkin  .rosinstall  setup.sh
02_code/catkin_ws/devel/.private/iai_kitchen/lib/pkgconfig/: iai_kitchen.pc
02_code/catkin_ws/devel/.private/iai_kitchen/share/iai_kitchen/cmake/: iai_kitchenConfig.cmake
02_code/catkin_ws/devel/.private/iai_kitchen_defs/: .catkin  .rosinstall  setup.sh
02_code/catkin_ws/devel/.private/iai_kitchen_defs/lib/pkgconfig/: iai_kitchen_defs.pc
02_code/catkin_ws/devel/.private/iai_kitchen_defs/share/iai_kitchen_defs/cmake/: iai_kitchen_defsConfig.cmake
02_code/catkin_ws/devel/.private/iai_maps/: .catkin  .rosinstall  setup.sh
02_code/catkin_ws/devel/.private/iai_maps/lib/pkgconfig/: iai_maps.pc
02_code/catkin_ws/devel/.private/iai_maps/share/iai_maps/cmake/: iai_mapsConfig.cmake
02_code/catkin_ws/devel/.private/iai_semantic_maps/: .catkin  .rosinstall  _setup_util.py  setup.sh
02_code/catkin_ws/devel/.private/iai_semantic_maps/lib/pkgconfig/: iai_semantic_maps.pc
02_code/catkin_ws/devel/.private/iai_semantic_maps/share/iai_semantic_maps/cmake/: iai_semantic_mapsConfig.cmake
02_code/catkin_ws/devel/.private/vision_base/: .catkin  .rosinstall  setup.sh
02_code/catkin_ws/devel/.private/vision_base/lib/pkgconfig/: vision_base.pc
02_code/catkin_ws/devel/.private/vision_base/share/vision_base/cmake/: vision_baseConfig.cmake
02_code/catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  chemistry_laboratory.pc  iai_kitchen.pc  iai_kitchen_defs.pc  iai_maps.pc  iai_semantic_maps.pc  vision_base.pc
02_code/catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
02_code/catkin_ws/devel/share/chemistry_laboratory/cmake/: chemistry_laboratoryConfig-version.cmake  chemistry_laboratoryConfig.cmake
02_code/catkin_ws/devel/share/iai_kitchen/cmake/: iai_kitchenConfig-version.cmake  iai_kitchenConfig.cmake
02_code/catkin_ws/devel/share/iai_kitchen_defs/cmake/: iai_kitchen_defsConfig-version.cmake  iai_kitchen_defsConfig.cmake
02_code/catkin_ws/devel/share/iai_maps/cmake/: iai_mapsConfig-version.cmake  iai_mapsConfig.cmake
02_code/catkin_ws/devel/share/iai_semantic_maps/cmake/: iai_semantic_mapsConfig-version.cmake  iai_semantic_mapsConfig.cmake
02_code/catkin_ws/devel/share/vision_base/cmake/: vision_baseConfig-version.cmake  vision_baseConfig.cmake
02_code/catkin_ws/src/iai_maps/iai_kitchen/launch/: gazebo_spawn_kitchen.launch
02_code/catkin_ws/src/object_detection/: CMakeLists.txt  package.xml
02_code/catkin_ws/src/object_detection/msg/: ObjectDetection.msg
02_code/catkin_ws/src/object_detection/srv/: VisObjectInfo.srv
02_code/catkin_ws/src/vision_base/: CMakeLists.txt  package.xml
02_code/catkin_ws/src/vision_base/launch/: custom_world.launch  empty_eistee.launch  pr2_kitchen_sim.launch
02_code/catkin_ws/src/vision_base/models/pfanner_grune_icetea/: model.config  model.config~  model.sdf  model.sdf~  model.urdf
02_code/catkin_ws/src/vision_base/models/sun_icetea/: model-1_4.sdf  model.sdf
02_code/catkin_ws/src/vision_base/src/: listener.cpp
02_code/catkin_ws/src/vision_base/worlds/: custom.world
vision/: CMakeLists.txt  package.xml  random_trees_classifier_save  random_trees_color_save  random_trees_cvfh_save
vision/data/: README.md
vision/launch/: node_only.launch  node_with_kinect.launch  node_with_pr2.launch  pr2_only.launch  pr2_only_zero-position.launch  vision_further_away.launch  vision_kinect.launch  vision_main_node_only.launch  vision_main_pr2_sim_only.launch  vision_main_pr2_sim_only_zero_position.launch  vision_main_sim.launch  vision_main_sim_romanski.launch
vision/meshes/: cup_eco_orange.pcd  edeka_red_bowl.pcd  eistee_mesh.pcd  hela_curry_ketchup.pcd  ja_milch.pcd  kelloggs_toppas_mini.pcd  kelloggs_toppas_mini.ply  koelln_muesli_knusper_honig_nuss.pcd  pringles.pcd  sigg_bottle.pcd  tomato_sauce_oro_di_parma.pcd
vision/models/pfanner_grune_icetea/: model.sdf
vision/pcd_save/meshes/: edeka_red_bowl.pcd  kelloggs_toppas_mini.pcd  pringles.pcd  tomato_sauce_oro_di_parma.pcd
vision/src/: FeatureCloud.h  TemplateAlignment.h  conversion.h  globals.h  listener.cpp  main.cpp  perception.h  saving.h  viewer.h
vision/src/node/: vision_node.cpp  vision_node.h
vision/src/perception/: perception.cpp  perception.h  short_types.h
vision/src/perception/container/: CloudContainer.cpp  CloudContainer.h
vision/src/perception/transformer/: CloudTransformer.cpp  CloudTransformer.h
vision/src/recognition/: classifier.cpp  classifier.h
vision/src/saving/: saving.cpp  saving.h
vision/src/services/: services.cpp  services.h
vision/src/viewer/: viewer.cpp  viewer.h
vision/tools/: CMakeLists.txt  README.md  batch_processor.cpp
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/srv/: PokeObject.srv
