<?xml version="1.0"?>
<package format="2">
    <name>vision_suturo</name>
    <version>0.0.0</version>
    <description>The vision package of Suturo-project 17/18</description>

    <maintainer email="link@todo.todo">alex</maintainer>
    <maintainer email="tammo@todo.todo">tammo</maintainer>

    <license>TODO</license>

    <!-- <build_depend>object_detection</build_depend>
    <run_depend>object_detection</run_depend> -->
    <depend>object_detection</depend>
    <depend>vision_suturo_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf</depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>


    <export>
    </export>
</package>
