<?xml version="1.0"?>
<package format="2">
  <name>vision_base</name>
  <version>0.0.0</version>
  <description>The vision_base package</description>

  <maintainer email="tammo@todo.todo">tammo</maintainer>

  <license>TODO</license>

  <!-- <build_depend>object_detection</build_depend>
  <run_depend>object_detection</run_depend> -->
  <depend>object_detection</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
